@@ -6,12 +6,13 @@
 ---------------------------------------------
 - 2020-06-24                                -
 ---------------------------------------------
-.: WSM: Change angular social login package to support Angular 9 Ivy (WSM-139)
+.: WSM: Task: Change angular social login package to support Angular 9 Ivy (WSM-139)
+.: WSM: Task: CLONE - Change URL from "shop" to "page" (WSM-144)
 
 ---------------------------------------------
 - 2020-06-23                                -
 ---------------------------------------------
-.: WSM: Preview information banner scroll width issue (WSM-112)
+.: WSM: Task: Preview information banner scroll width issue (WSM-112)
 
 ---------------------------------------------
 - 2020-06-22                                -
